# cctv-home-occupancy

./: .gitignore  LICENSE  PLAN.md  README.md  SCRYPTED_GUIDE.md  calibrate-plan.md  calibrate.py  config.json.example  pyproject.toml  pytest.ini  requirements.txt  run.py  visualize_tracker.py
.github/workflows/: test.yml
src/: __init__.py  api.py  config.py  database.py  logger.py  motion_detector.py  object_tracker.py  pipeline.py  types.py  video_reader.py  visualization.py
tests/: conftest.py  test_api.py  test_calibrate.py  test_config.py  test_database.py  test_logger.py  test_motion_detector.py  test_object_tracker.py  test_pipeline.py  test_types.py  test_visualization.py
